--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -30,7 +30,7 @@
                                 {% csrf_token %}
                                 <div class="form-group">
                                     <label class="small mb-1" for="{{ form.username.id_for_label }}">
-                                        Username
+                                        Username!
                                     </label>
                                     {{ form.username }}
                                 </div>
